crates/python_parser/tests/snapshots/invalid_syntax@unterminated_fstring_newline_recovery.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/unterminated_fstring_newline_recovery.py
---
## AST

```
Module(
    ModModule {
        range: 0..67,
        body: [
            Expr(
                ExprStmt {
                    range: 0..7,
                    value: FString(
                        FStringExpr {
                            range: 0..7,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 0..7,
                                            elements: [],
                                            flags: FStringFlags {
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 8..13,
                    value: BinOp(
                        BinOpExpr {
                            range: 8..13,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 8..9,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 12..13,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 14..24,
                    value: FString(
                        FStringExpr {
                            range: 14..24,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 14..24,
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 16..22,
                                                        value: "hello ",
                                                    },
                                                ),
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 22..24,
                                                        expression: Name(
                                                            NameExpr {
                                                                range: 23..24,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 25..30,
                    value: BinOp(
                        BinOpExpr {
                            range: 25..30,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 25..26,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 29..30,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 31..42,
                    value: FString(
                        FStringExpr {
                            range: 31..42,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 31..42,
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 33..39,
                                                        value: "hello ",
                                                    },
                                                ),
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 39..42,
                                                        expression: Name(
                                                            NameExpr {
                                                                range: 40..41,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: Some(
                                                            FStringFormatSpec {
                                                                range: 42..42,
                                                                elements: [],
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 43..48,
                    value: BinOp(
                        BinOpExpr {
                            range: 43..48,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 43..44,
                                    value: Int(
                                        3,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 47..48,
                                    value: Int(
                                        3,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 49..60,
                    value: FString(
                        FStringExpr {
                            range: 49..60,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 49..60,
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 51..57,
                                                        value: "hello ",
                                                    },
                                                ),
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 57..60,
                                                        expression: Name(
                                                            NameExpr {
                                                                range: 58..59,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 61..66,
                    value: BinOp(
                        BinOpExpr {
                            range: 61..66,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 61..62,
                                    value: Int(
                                        4,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 65..66,
                                    value: Int(
                                        4,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | f"hello
  |   ^^^^^ Syntax Error: f-string: unterminated string
2 | 1 + 1
3 | f"hello {x
  |


  |
1 | f"hello
  |        ^ Syntax Error: Expected FStringEnd, found newline
2 | 1 + 1
3 | f"hello {x
4 | 2 + 2
  |


  |
1 | f"hello
2 | 1 + 1
3 | f"hello {x
  |            Syntax Error: f-string: unterminated string
4 | 2 + 2
5 | f"hello {x:
  |


  |
2 | 1 + 1
3 | f"hello {x
4 | 2 + 2
  | ^ Syntax Error: f-string: expecting '}'
5 | f"hello {x:
6 | 3 + 3
  |


  |
1 | f"hello
2 | 1 + 1
3 | f"hello {x
  |            Syntax Error: Expected FStringEnd, found Unknown
4 | 2 + 2
5 | f"hello {x:
  |


  |
3 | f"hello {x
4 | 2 + 2
5 | f"hello {x:
  |             Syntax Error: f-string: unterminated string
6 | 3 + 3
7 | f"hello {x}
  |


  |
5 | f"hello {x:
6 | 3 + 3
7 | f"hello {x}
  |             Syntax Error: f-string: unterminated string
8 | 4 + 4
  |
